--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 server:
   port: 9000
 spring:
+  application:
+    name: "cards"
   datasource:
     url:  jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
@@ -15,16 +17,6 @@ spring:
       ddl-auto: update
     show-sql: true
   profiles:
-    active: "local"
-
-build:
-  version: "3.0"
-
-cards:
-  message: "Welcome to XBank accounts cards local APIs"
-  contactDetails:
-    name: "Dragos Lech - Developer"
-    email: "dragos@xbank.com"
-  onCallSupport:
-    - (+62) 855-5555-3333
-    - (+62) 837-4322-8883
+    active: "prod"
+  config:
+    import: "optional:configserver:http://localhost:8071/"
