--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,3 +20,9 @@ spring:
     active: "prod"
   config:
     import: "optional:configserver:http://localhost:8071/"
+    
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
